# inf-edit

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yaml
inedit/: Cargo.toml
src/: app.rs  components.rs  event_handler.rs  lib.rs  main.rs  settings.rs  theme.rs  ui.rs
src/components/: bottom_bar.rs  editor.rs  file_view.rs  help_widget.rs  main_widget.rs  notification.rs  panel.rs  popup.rs  primary_sidebar.rs  secondary_sidebar.rs  status.rs  term.rs  top_bar.rs
src/components/bottom_bar/: item.rs
src/components/main_widget/: editor.rs  settings_editor.rs  welcome_widget.rs
src/components/panel/: term.rs
src/components/primary_sidebar/: component.rs  file_view.rs  git.rs  search.rs
src/components/secondary_sidebar/: component.rs  help_widget.rs
src/components/top_bar/: command_palette.rs
src/event_handler/: component.rs  global.rs  palette.rs  util.rs
